--- a/Frontend/total/indexvragen.html
+++ b/Frontend/total/indexvragen.html
@@ -27,11 +27,11 @@
                 <div class="c-onderwerp-form">
                 </div>
                 <div class="c-btn-send-subject js-btn-onderwerp-verzenden"></div>
-                <input class="c-input-onderwerp" placeholder="Voeg een onderwerp toe" id="js-vraag"></input>
+                <input class="c-input-onderwerp js-input-onderwerp" placeholder="Voeg een onderwerp toe" id="js-input-onderwerp"></input>
                 <div class="c-form">     
                 </div>
                 <div class="js-subject c-subject-vragen c-input-style" >
-                    <input list="onderwerpen" name="js-input-onderwerp" placeholder="onderwerp" id="js-input-onderwerp">
+                    <input list="onderwerpen" name="js-input-onderwerp-vragen" placeholder="onderwerp" id="js-input-onderwerp-vragen">
                     <datalist class="js-selecteditem" name="onderwerpen" id="onderwerpen">
                     <option value="Biologie">
                     </datalist>
@@ -51,12 +51,11 @@
                 <input class="c-input-d c-input-style" id="js-antwoordd"></input>
                 <div class="c-div-level c-margin">
                     <label class="c-lbl-level ">Moeilijkheid: </label>
-                    <label class="c-lbl-1">1</label>
-                    <label class="c-lbl-2">2</label>
-                    <label class="c-lbl-3">3</label>
+                    <label class="c-lbl-1 js-moeilijkheid1">1</label>
+                    <label class="c-lbl-2 js-moeilijkheid2">2</label>
+                    <label class="c-lbl-3 js-moeilijkheid3">3</label>
                 </div>
                 <div class="c-btn-add js-btn-verzenden"></div>
-
                 <div class="c-form-2">     
                 </div>
                 <form class="c-subject-2" >
@@ -66,6 +65,7 @@
                 </form>
                 <label class="c-label-q-2"> Reeds ingegeven vraag: </label>
                 <input class="c-input-2" placeholder="hoeveel poten heeft een spin?"></input>
+                <label class="c-lbl-antw-2">Antwoorden:</label>
                     <input class="c-radio-a-2 c-radiobtn-option" type="radio" name="vragen" value="a"><br>
                     
                     <input class="c-radio-b-2 c-radiobtn-option" type="radio" name="vragen" value="b"><br>
@@ -77,6 +77,12 @@
                 <input class="c-input-b-2 c-input-style" placeholder="6"></input>
                 <input class="c-input-c-2 c-input-style" placeholder="8"></input>
                 <input class="c-input-d-2 c-input-style" placeholder="10"></input>
+                <div class="c-div-level-2 ">
+                    <label class="c-lbl-level">Moeilijkheid: </label>
+                    <label class="c-lbl-1 ">1</label>
+                    <label class="c-lbl-2">2</label>
+                    <label class="c-lbl-3">3</label>
+                </div>
                 <div class="c-btn-delete"></div>
         </div>
        
