samenvoegen schermen avatar en loading
data van scherm avatar naar loading sturen

--- a/Frontend/avatar.html
+++ b/Frontend/avatar.html
@@ -1,84 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Highscore</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Highscore</title>
 
-    <!-- script -->
-    <script src="./scripts/avatar.js"></script>
-    <!-- css -->
-    <link rel="stylesheet" href="style/normalize.css">
-    <link rel="stylesheet" href="css/screenAvatar.css">
+        <!-- script -->
+        <script src="./scripts/FetchDataAsync.js"></script>
+        <script src="./scripts/avatar.js"></script>
+        <!-- css -->
+        <link rel="stylesheet" href="style/normalize.css">
+        <link rel="stylesheet" href="css/screenAvatar.css">
+
 </head>
+
 <body>
-
-
-
-<div class="o-container u-max-width-xlg">
-
-<div class="c-groteOlievlek ">
-        <div class="c-dashboard_avatar u-grid-x-1 u-grid-y-1">
-                <h1 class="c-zero_margin ">Kies een raket en naam voor deze missie</h1>
+        <div class="o-container u-max-width-xlg">
+                <div class="c-groteOlievlek ">
+                        <div class="c-dashboard_avatar u-grid-x-1 u-grid-y-1">
+                                <h1 class="c-zero_margin ">Kies een raket en naam voor deze missie</h1>
+                        </div>
+                        <div class="gallery js-div--rockets">
+                        </div>
+                        <div class="form">
+                                <h3 class="js-titleTeam">Teamnaam groep 1</h3>
+                                <div class="form-inline">
+                                        <input type="text" name="Groupname" class="js-teamname"
+                                                placeholder="Typ hier je groepnaam...">
+                                        <button class="button js-volgende">Volgende</button>
+                                </div>
+                        </div>
+                </div>
         </div>
-    <div class="gallery">
-        <div class="gallery__item gallery__item js-raket" value="raketdonkerroodroze.svg"> 
-                <img src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketdonkerroodroze.svg" class="gallery__img" value="raketdonkerroodroze.svg"  alt="Image 1">
-        </div>
-        <div class="gallery__item gallery__item js-raket" value="raketgroengrijs.svg">
-                <img src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketgroengrijs.svg" class="gallery__img" alt="Image 1">
-        </div>
-        <div class="gallery__item gallery__item--3">
-                <img src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketgroenlichtgroen.svg" class="gallery__img " value="raketgroenlichtgroen.svg" alt="Image 1">
-        </div>
-        <div class="gallery__item gallery__item--4">
-                <img src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketlichtblauwgrijs.svg" class="gallery__img " value="raketlichtblauwgrijs.svg" alt="Image 1">
-        </div>
-        <div class="gallery__item gallery__item--5">
-                <img src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketlichtgeelgeel.svg" class="gallery__img "  value="raketlichtgeelgeel.svg" alt="Image 1">
-        </div>
-        <div class="gallery__item gallery__item--6">
-                <img src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketlichtgroengeel.svg" class="gallery__img " value="raketlichtgroengeel.svg" alt="Image 1">
-        </div>
-        <div class="gallery__item gallery__item--7">
-                <img src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketlichtgroengroen.svg" class="gallery__img " value="raketlichtgroengroen.svg" alt="Image 1">
-        </div>
-        <div class="gallery__item gallery__item--8">
-                <img src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketlichtrozeroze.svg" class="gallery__img " value="raketlichtrozeroze.svg" alt="Image 1">
-        </div>
-        <div class="gallery__item gallery__item--9">
-                <img src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketorangeorange.svg" class="gallery__img " value="raketorangeorange.svg" alt="Image 1">
-        </div>
-        <div class="gallery__item gallery__item--10">
-                <img src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketpaarsgrijs.svg" class="gallery__img" value="raketpaarsgrijs.svg" alt="Image 1">
-        </div>
-        <div class="gallery__item gallery__item--11">
-                <img src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketorangeorange.svg" class="gallery__img " value="raketorangeorange.svg" alt="Image 1">
-        </div>
-        <div class="gallery__item gallery__item--12">
-                <img src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketroodlichtorange.svg" class="gallery__img " value="raketroodlichtorange.svg" alt="Image 1">
-        </div>
-        </div>
-        <div class="form"> 
-                <h3>Teamnaam groep 1</h3>
-                <form class="form-inline">
-                        <input type="text" name="Groupname" placeholder="Typ hier je groepnaam...">
-                        <a class="button js-volgende" href="./avatarTeam2.html">Volgende</a>
-                </form>
-        </div>
-</div>
-
-
-
-</div>
-
-
-
-
-</div>
-
-
-    
 </body>
 </html>
