--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,8 +7,8 @@
     <title>Login</title>
 
     <!-- script -->
-<!--     <script src="./scripts/app.js"></script>
- -->    <!-- css -->
+    <script src="./scripts/index.js"></script>
+    <!-- css -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/screen.css">
 </head>
@@ -16,7 +16,7 @@
     <section class="o-row o-row--lg o-row--login" >
         <div class=" o-container u-max-width-lg">    
             <div  class="c-dashboard_star">               
-                <button  class="c-button c-img__center">
+                <button  class="c-button c-img__center js-btnStart">
                     <svg class="c-icon" xmlns="http://www.w3.org/2000/svg" width="47" height="59" viewBox="0 0 47 59">
                     <g id="Polygon_53" data-name="play" transform="translate(47) rotate(90)" fill="#474242">
                     <path d="M 55.38336181640625 46.00000381469727 L 3.616640090942383 46.00000381469727 C 3.084379911422729 46.00000381469727 2.827339887619019 45.63910293579102 2.74153995513916 45.48394393920898 C 2.655730009078979 45.32877349853516 2.486700057983398 44.91919326782227 2.769659996032715 44.4683723449707 L 28.65300941467285 3.23048210144043 C 28.91835021972656 2.807742118835449 29.33373069763184 2.762102127075195 29.5 2.762102127075195 C 29.66626930236816 2.762102127075195 30.08164978027344 2.807742118835449 30.34699058532715 3.23048210144043 L 56.23035049438477 44.4683837890625 C 56.51330947875977 44.91919326782227 56.34428024291992 45.32876205444336 56.25846862792969 45.48393249511719 C 56.17266082763672 45.63910293579102 55.91561889648438 46.00000381469727 55.38336181640625 46.00000381469727 Z" stroke="none"/>
@@ -26,8 +26,8 @@
                     Speel een spel!
                 </button>
             </div>
-            <div style="position: absolute; top:2rem; right:4rem;">
-                <button class="c-button c-img__center">Leerkrachten</button>
+            <div class="c-leerkrachtenbtn">
+                <button class="c-button c-img__center js-btnLeerkracht">Leerkrachten</button>
             </div>
             <img class="c-maan" src="https://aikovanryssel.github.io/project2IMG/img/svg/maan.svg" alt="">
             <img class="c-raket" src="https://aikovanryssel.github.io/project2IMG/img/svg/raketindex.svg" alt="raket">            
