--- a/Frontend/loadscreen.html
+++ b/Frontend/loadscreen.html
@@ -27,11 +27,11 @@
             </div>
 
             <div  class="c-dashboard_loading">
-                <div class="c-olievlek c-img__center">
+                <div class="c-olievlek c-img__center js-raketA">
                     <img class="c-img-scale " src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketorangeorange.svg"  alt="raket team 1">
                </div>
-                <div class="c-olievlek c-img__center">
-                    <img class="c-img-scale" src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketorangeorange.svg" alt="raket team 2">
+                <div class="c-olievlek c-img__center js-raketB">
+                    <img class="c-img-scale " src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketorangeorange.svg" alt="raket team 2">
                 </div>
             </div>
             <div class="c-dashboard_loading c-img-center">
