--- a/Frontend/total/index_vragen.html
+++ b/Frontend/total/index_vragen.html
@@ -79,12 +79,12 @@
                     <input class="c-input-c c-input-style" placeholder="antwoord c" id="js-antwoordc"></input>
                     <input class="c-input-d c-input-style" placeholder="antwoord d" id="js-antwoordd"></input>
                     <div class="c-div-level c-margin">
-                        <label class="c-lbl-level ">Moeilijkheid: </label>
+                        <label class="c-lbl-level">Moeilijkheid: </label>
                         <label class="c-lbl-1 js-moeilijkheid1">1</label>
                         <label class="c-lbl-2 js-moeilijkheid2">2</label>
                         <label class="c-lbl-3 js-moeilijkheid3">3</label>
                     </div>
-                    <div class="c-btn-delete js-btn-verzenden"></div>
+                    <div class="c-btn-delete js-btn-delete" id=""></div>
                 </div>   
             </div>     
         </div>        
