--- a/Frontend/Schermen yente/Highscore/index.html
+++ b/Frontend/Schermen yente/Highscore/index.html
@@ -21,7 +21,7 @@
                          <h1 class="h01">Team B</h1>
                         <h1 class="h011">1200</h1>
                         <figure class="img1">
-                            <img src="https://aikovanryssel.github.io/project2IMG/img/raketrechtnieuw/svg/Component 27 – 1.svg" class="gallery__img " alt="Image 1">
+                            <img src="https://aikovanryssel.github.io/project2IMG/img/raketrechtnieuw/svg/raketdonkerroodroze.svg" class="gallery__img " alt="Image 1">
                         </figure> 
 
 
@@ -29,12 +29,12 @@
                     <h1 class="h02">Team A</h1>
                     <h1 class="h022">1250</h1>
                     <figure class="img2">
-                            <img src="https://aikovanryssel.github.io/project2IMG/img/raketrechtnieuw/svg/Component 27 – 1.svg" class="gallery__img " alt="Image 1">
+                            <img src="https://aikovanryssel.github.io/project2IMG/img/raketrechtnieuw/svg/raketdonkerroodroze.svg" class="gallery__img " alt="Image 1">
                     </figure>
                     <h1 class="h03">Team C</h1>
                     <h1 class="h033">1100</h1>
                     <figure class="img3">
-                            <img src="https://aikovanryssel.github.io/project2IMG/img/raketrechtnieuw/svg/Component 27 – 1.svg" class="gallery__img" alt="Image 1">
+                            <img src="https://aikovanryssel.github.io/project2IMG/img/raketrechtnieuw/svg/raketdonkerroodroze.svg" class="gallery__img" alt="Image 1">
                     </figure>
             </div>
             <div class="c-groteOlievlek">
