--- a/Frontend/usersettings.html
+++ b/Frontend/usersettings.html
@@ -30,6 +30,10 @@
             <label for="input--password">Wachtwoord:</label>
             <input type="password" class="c-input js-input--password" id="input--password">
         </div>
+        <div class="c-field">
+            <label for="input--password2">Wachtwoord bevestingen:</label>
+            <input type="password" class="c-input js-input--password2" id="input--password2">
+        </div>
         <button class="js-btn--change-userinfo">Opslaan</button>
     </div>
 </body>
