--- a/Frontend/total/index.html
+++ b/Frontend/total/index.html
@@ -71,7 +71,7 @@
                         </p>
                         <p class="u-mb-md">
                             <!-- Button -->
-                            <button class="o-button-reset c-button js-sign-in-button">Log in</button>
+                            <button class="c-button js-sign-in-button">Log in</button>
                         </p>
                     </div>
                 </form>
