--- a/Frontend/total/index_vragen.html
+++ b/Frontend/total/index_vragen.html
@@ -44,9 +44,9 @@
                 <input class="c-input-d c-input-style" id="js-antwoordd"></input>
                 <div class="c-div-level c-margin">
                     <label class="c-lbl-level ">Moeilijkheid: </label>
-                    <label class="c-lbl-1 js-moeilijkheid1">1</label>
-                    <label class="c-lbl-2 js-moeilijkheid2">2</label>
-                    <label class="c-lbl-3 js-moeilijkheid3">3</label>
+                    <label class="c-lbl-1 js-moeilijkheid1">0</label>
+                    <label class="c-lbl-2 js-moeilijkheid2">1</label>
+                    <label class="c-lbl-3 js-moeilijkheid3">2</label>
                 </div>
                 <div class="c-btn-add js-btn-verzenden"></div>
             </div>
@@ -80,12 +80,12 @@
                     <input class="c-input-d c-input-style" id="js-antwoordd"></input>
                     <div class="c-div-level c-margin">
                         <label class="c-lbl-level">Moeilijkheid: </label>
-                        <label class="c-lbl-1 js-moeilijkheid1">1</label>
-                        <label class="c-lbl-2 js-moeilijkheid2">2</label>
-                        <label class="c-lbl-3 js-moeilijkheid3">3</label>
+                        <label class="c-lbl-1 js-moeilijkheid1">0</label>
+                        <label class="c-lbl-2 js-moeilijkheid2">1</label>
+                        <label class="c-lbl-3 js-moeilijkheid3">2</label>
                     </div>
                     <div class="c-btn-delete js-btn-delete" id=""></div>
-                    <div class="c-btn-change lbl-middle">change</div>
+                    <div class="c-btn-change lbl-middle">wijzigen</div>
                 </div>   
             </div>     
         </div>        
