JS - Login - Error
- form niet naar server doorsturen

--- a/Frontend/total/index.html
+++ b/Frontend/total/index.html
@@ -21,7 +21,7 @@
         <div class="c-background">
         <section class="o-row o-row--lg o-row--login">
             <div class="o-container u-max-width-sm">
-                <form class="c-card" action="#">
+                <form class="c-card">
                     <div class="c-card__body">
                         <h2 class="c-logo">
                             <label class="c-label-logo">
