--- a/Frontend/total/index_vragen.html
+++ b/Frontend/total/index_vragen.html
@@ -15,7 +15,7 @@
         <div class="c-bg-oil">
             <div class="c-homeknop-bg"> 
                 <div class="c-homebtn">
-                    <label class="lbl-home">home</label>
+                    <label class="lbl-home">Afmelden</label>
                 </div>
             </div>
             <div class="c-onderwerp-form">
