Css - Gebruikers opvragen + verwijderen

--- a/Frontend/users.html
+++ b/Frontend/users.html
@@ -10,11 +10,21 @@
     <script src="./scripts/FetchDataAsync.js"></script>
     <script src="./scripts/cookies.js"></script>
     <script src="./scripts/users.js"></script>
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/screen_user.css">
 </head>
 
 <body>
-    <div class="c-users js-users">
-        
+    <div class="c-box--users">
+        <div class="c-title-bar">
+            <h1 class="c-white">Alle gebruikers</h1>
+            <button class="c-btn c-btn__add-user js-addUser">Gebruiker toevoegen</button>
+        </div>
+        <div class="c-users--background">
+            <div class="c-users js-users">
+
+            </div>
+        </div>
     </div>
 </body>
 
