--- a/Frontend/leerkrachtenvragen.html
+++ b/Frontend/leerkrachtenvragen.html
@@ -21,7 +21,7 @@
             </div>
             <div class="c-onderwerp-form">
                 <div class="c-btn-send-subject js-btn-onderwerp-verzenden"></div>
-                    <input class="c-input-onderwerp js-input-onderwerp" placeholder="Voeg een onderwerp toe" id="js-input-onderwerp"></input>
+                    <input class="c-input-onderwerp js-input-onderwerp" placeholder="Voeg een nieuw onderwerp toe" id="js-input-onderwerp"></input>
             </div>
             <div class="c-form">
                 <input class="c-input-vragen" placeholder="Geef een vraag in" id="js-vraag"></input>
