--- a/Frontend/leerkrachtenvragen.html
+++ b/Frontend/leerkrachtenvragen.html
@@ -44,10 +44,13 @@
                 <input class="c-input-c c-input-style" id="js-antwoordc"></input>
                 <input class="c-input-d c-input-style" id="js-antwoordd"></input>
                 <div class="c-div-level c-margin">
-                    <label class="c-lbl-level ">Moeilijkheid: </label>
-                    <label class="c-lbl-1 js-moeilijkheid1">0</label>
-                    <label class="c-lbl-2 js-moeilijkheid2">1</label>
-                    <label class="c-lbl-3 js-moeilijkheid3">2</label>
+                    <label class="c-lbl-level">Moeilijkheid: </label>
+                    <input class="o-hide-accessible" type="radio" value="0" name="DYNAMISCH NAME TODO" id="dif-1">
+                    <label for="dif-1" class="c-lbl-1 js-moeilijkheid1">0</label>
+                    <input class="o-hide-accessible" type="radio" value="1" id="dif-2">
+                    <label for="dif-2" class="c-lbl-2 js-moeilijkheid2">1</label>
+                    <input class="o-hide-accessible" type="radio" value="2" id="dif-3">
+                    <label for="dif-3" class="c-lbl-3 js-moeilijkheid3">2</label>
                 </div>
                 <div class="c-btn-add js-btn-verzenden"></div>
             </div>
@@ -81,9 +84,12 @@
                     <input class="c-input-d c-input-style" id="js-antwoordd"></input>
                     <div class="c-div-level c-margin">
                         <label class="c-lbl-level">Moeilijkheid: </label>
-                        <label class="c-lbl-1 js-moeilijkheid1">0</label>
-                        <label class="c-lbl-2 js-moeilijkheid2">1</label>
-                        <label class="c-lbl-3 js-moeilijkheid3">2</label>
+                        <input class="o-hide-accessible" type="radio" value="0" name="DYNAMISCH NAME TODO" id="dif-1">
+                        <label for="dif-1" class="c-lbl-1 js-moeilijkheid1">0</label>
+                        <input  class="o-hide-accessible" type="radio" value="1" id="dif-2">
+                        <label for="dif-2" class="c-lbl-2 js-moeilijkheid2">1</label>
+                        <input  class="o-hide-accessible" type="radio" value="2" id="dif-3">
+                        <label for="dif-3" class="c-lbl-3 js-moeilijkheid3">2</label>
                     </div>
                     <div class="c-btn-delete js-btn-delete" id=""></div>
                     <div class="c-btn-change lbl-middle">wijzigen</div>
