--- a/Frontend/leerkrachtenvragen.html
+++ b/Frontend/leerkrachtenvragen.html
@@ -18,7 +18,12 @@
                 <div class="c-homebtn">
                     <label class="lbl-home">Afmelden</label>
                 </div>
+                <h1 class="lbl-titletekst">Move for fortune</h1>
+                <div class="c-highscorebtn">
+                    <label class="lbl-highscore">Verwijder highscore</label>
+                </div>
             </div>
+            
             <div class="c-onderwerp-form">
                 <div class="c-btn-send-subject js-btn-onderwerp-verzenden"></div>
                     <input class="c-input-onderwerp js-input-onderwerp" placeholder="Voeg een nieuw onderwerp toe" id="js-input-onderwerp"></input>
