--- a/Frontend/highscore.html
+++ b/Frontend/highscore.html
@@ -44,12 +44,21 @@
                                                         <h1 class="marginh1">&nbsp;</h1>
                                                         <h1 class="marginh1">Highscores</h1>
 
-                                        <button class="button" type="submit">Home</button>
+                                        <button class="js-button button" >Home</button>
                                 </form>
                         </div>
                         <div class="divTable">
                                         <div class="divTableBody jsdata">
-                                                
+                                                <div class="divTableRow">
+                                                <div class="divTableCell01">4</div>
+                                                        <div class="divTableCell1">
+                                                                <figure class="imageHighscore">
+                                                                        <img src="https://aikovanryssel.github.io/project2IMG/img/raketrechtnieuw/svg/raketdonkerroodroze.svg" class="" alt="Image 1">
+                                                                </figure>
+                                                        </div>
+                                                        <div class="divTableCell">yeet</div>
+                                                        <div class="divTableCell2">500</div>
+                                                </div>
                                         </div>
                                 </div>
             </div>
