--- a/Frontend/highscore.html
+++ b/Frontend/highscore.html
@@ -40,12 +40,15 @@
             <div class="c-groteOlievlek">
                         <div class="form"> 
                                 
-                                        <form class="form-inline">
-                                                        <h1 class="marginh1">&nbsp;</h1>
+                                        <!-- <form class="form-inline"> -->
+                                                        
+                                                        <div class="form-inline">
+                                                                        <h1 class="marginh1">&nbsp;</h1>
                                                         <h1 class="marginh1">Highscores</h1>
 
                                         <button class="js-button button" >Home</button>
-                                </form>
+                                </div>
+                                <!-- </form> -->
                         </div>
                         <div class="divTable">
                                         <div class="divTableBody jsdata">
