--- a/Frontend/leerkrachtenvragen.html
+++ b/Frontend/leerkrachtenvragen.html
@@ -6,6 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <script src="scripts/dataHandler.js"></script>
     <script src="scripts/cookies.js"></script>
+    <script src="scripts/FetchDataAsync.js"></script>
     <script src="scripts/questions.js"></script>
     <link rel="stylesheet" href="css/leerkrachtenvragen.css">
     <title>Vragen toevoegen</title>
@@ -20,7 +21,7 @@
                 </div>
                 <h1 class="lbl-titletekst">Move for fortune</h1>
                 <div class="c-highscorebtn">
-                    <label class="lbl-highscore">Verwijder highscore</label>
+                    <label class="lbl-highscore js-btn--delete-highscore">Verwijder highscore</label>
                 </div>
             </div>
             
