--- a/Frontend/leerkrachtenvragen.html
+++ b/Frontend/leerkrachtenvragen.html
@@ -2,8 +2,9 @@
 <html lang="en" class="">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta charset="UTF-8">
+ 
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="scripts/dataHandler.js"></script>
     <script src="scripts/cookies.js"></script>
     <script src="scripts/FetchDataAsync.js"></script>
