--- a/Frontend/highscore.html
+++ b/Frontend/highscore.html
@@ -20,6 +20,7 @@
 
                          <h1 class="h01">Team B</h1>
                         <h1 class="h011">1200</h1>
+                        <h1 class="h0111">1</h1>
                         <figure class="img1">
                             <img src="https://aikovanryssel.github.io/project2IMG/img/raketrechtnieuw/svg/raketdonkerroodroze.svg" class="gallery__img " alt="Image 1">
                         </figure> 
