--- a/Frontend/avatar.html
+++ b/Frontend/avatar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
         <meta charset="UTF-8">
@@ -11,6 +11,7 @@
         <script src="./scripts/FetchDataAsync.js"></script>
         <script src="./scripts/avatar.js"></script>
         <!-- css -->
+        <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style/normalize.css">
         <link rel="stylesheet" href="css/screenAvatar.css">
 
