--- a/Frontend/AddUser.html
+++ b/Frontend/AddUser.html
@@ -10,6 +10,7 @@
     <script src="./scripts/FetchDataAsync.js"></script>
     <script src="./scripts/cookies.js"></script>
     <script src="./scripts/AddUser.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/screen_addUser.css">
 </head>
