--- a/Frontend/leerkrachtenlogin.html
+++ b/Frontend/leerkrachtenlogin.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="nl">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -11,7 +11,7 @@
 
         <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
         <link rel="mask-icon" href="safari-pinned-tab.svg" color="#3385FF">
-
+        <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/screenlogin.css">        
         <script src="scripts/cookies.js"></script>
