--- a/Frontend/leerkrachtenvragen.html
+++ b/Frontend/leerkrachtenvragen.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="">
+<html lang="nl" class="">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,7 @@
     <script src="scripts/cookies.js"></script>
     <script src="scripts/FetchDataAsync.js"></script>
     <script src="scripts/questions.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/leerkrachtenvragen.css">
     <title>Vragen toevoegen</title>
 </head>
