--- a/Frontend/users.html
+++ b/Frontend/users.html
@@ -10,6 +10,7 @@
     <script src="./scripts/FetchDataAsync.js"></script>
     <script src="./scripts/cookies.js"></script>
     <script src="./scripts/users.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/screen_user.css">
 </head>
