--- a/Frontend/usersettings.html
+++ b/Frontend/usersettings.html
@@ -10,7 +10,7 @@
     <script src="./scripts/FetchDataAsync.js"></script>
     <script src="./scripts/cookies.js"></script>
     <script src="./scripts/UserSettings.js"></script>
-
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/screen_addUser.css">
 </head>
