--- a/Frontend/vragen.html
+++ b/Frontend/vragen.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
     <meta charset="UTF-8">
@@ -11,6 +11,7 @@
     <script src="./scripts/FetchDataAsync.js"></script>
     <script src="./scripts/GameLeerlingen.js"></script>
     <!-- css -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/screenvragenleerlingen.css">
 </head>
