JS - Muziek bij winnend team afspelen

--- a/Frontend/vragen.html
+++ b/Frontend/vragen.html
@@ -17,10 +17,9 @@
 </head>
 
 <body>
-    <!-- <audio controls autoplay hidden>
-        <source src="./img/project2song2.m4a" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio> -->
+    <audio controls autoplay hidden>
+        <source class="js-song" src="./music/project2song2.m4a" type="audio/mpeg">
+    </audio>
     <section class="o-row o-row--lg o-row--login">
         <div class=" o-container u-max-width-lg">
             <div class="u-grid-x-1 u-grid-y-1">
