--- a/Frontend/leerkrachtenlogin.html
+++ b/Frontend/leerkrachtenlogin.html
@@ -72,12 +72,16 @@
 
                                    </label>                                       
                                </span>
-                            </span>                             
+                            </span>   
+                                                  
                         </p>
                         <p class="u-mb-md">
                             <!-- Button -->
                             <button class="c-button js-sign-in-button">Log in</button>
                         </p>
+                        <label class="c-lbl-password">
+                            wachtwoord vergeten
+                        </label>   
                     </div>
                 </form>
                 
