--- a/Frontend/leerkrachtenvragen.html
+++ b/Frontend/leerkrachtenvragen.html
@@ -29,12 +29,13 @@
                 <div class="c-homebtn">
                     <label class="lbl-home">Afmelden</label>
                 </div>
-                <h1 class="lbl-titletekst">Move for fortune</h1>
+                <div class="c-btngebruiker js-gebruiker">
+                    <label class="lbl-gebruiker">Gebruiker toevoegen</label>
+                </div>
                 <div class="c-highscorebtn">
                     <label class="lbl-highscore js-btn--delete-highscore">Verwijder highscore</label>
                 </div>
             </div>
-            
             <div class="c-onderwerp-form">
                 <div class="c-btn-send-subject js-btn-onderwerp-verzenden"></div>
                     <input class="c-input-onderwerp js-input-onderwerp" placeholder="Voeg een nieuw onderwerp toe" id="js-input-onderwerp"></input>
