--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -41,7 +41,7 @@
             <img class="c-raket" src="https://aikovanryssel.github.io/project2IMG/img/svg/raketindex.svg" alt="raket">  
             <img class="c-logo-howest" src="./img/logo's/Opleidingslogo_Howest_Multimedia_en_Communicatietechnologie_staand_WIT.png" alt="logo howest">          
             <img class="c-logo-sport" src="./img/logo's/SportinnovatiecampusLogo.svg" alt="Sportinnovatiecampus_Logo">          
-            <img class="c-logo-sport2" src="./img/logo's/LogoSportEnBewegen.png" alt="Sportinnovatiecampus_Logo">          
+            <img class="c-logo-sport2" src="./img/logo's/logoSportEnBewegen.png" alt="Sportinnovatiecampus_Logo">          
             <img class="c-logo-howest2" src="./img/logo's/HowestLogoWit.png" alt="Sportinnovatiecampus_Logo">          
         </div>
     </section> 
