Scherm css - wachtwoord vergeten

--- a/Frontend/ForgotPassword.html
+++ b/Frontend/ForgotPassword.html
@@ -5,19 +5,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Wachtwoord vergeten</title>
 
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="./site.webmanifest">
+    <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#bf6663">
+    <meta name="msapplication-TileColor" content="#bf6663">
+    <meta name="theme-color" content="#ffffff">
+
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/screenlogin.css">
     <script src="./scripts/FetchDataAsync.js"></script>
     <script src="./scripts/cookies.js"></script>
     <script src="./scripts/ForgotPassword.js"></script>
 </head>
 
-<body>
+<!-- <body>
     <div class="c-forgot-password">
         <div class="c-input-fields">
-            <label for="input-mail">Mailadres:</label><input type="email" class="js-input-mail" id="input-mail">
             <button class="js-btn">Nieuw wachtwoord aanvragen</button>
         </div>
+    </div>
+</body>
+
+</html> -->
+
+<body>
+    <div class="c-background">
+        <section class="o-row o-row--lg o-row--login">
+            <div class="o-container u-max-width-sm">
+                <div class="c-card">
+                    <div class="c-card__body">
+                        <h2 class="c-logo">
+                            <label class="c-label-logo">
+                                <span class="c-dot"></span>
+                            </label>
+                        </h2>
+                        <p class="c-form-field js-username-field ">
+                            <label class="c-label" for="username">
+                                Email
+                                <span class="c-label__error-message js-username-error-message">
+                                    this field is required
+                                </span>
+                            </label>
+                            <input class="c-input js-input-mail" type="email" name="username" id="username"
+                                placeholder="e.g. john@howest.be" required>
+                        </p>
+                        <p class="u-mb-md">
+                            <!-- Button -->
+                            <button class="c-button js-btn">Verzend een nieuw wachtwoord</button>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </div>
 </body>
 
