--- a/Frontend/leerkrachtenlogin.html
+++ b/Frontend/leerkrachtenlogin.html
@@ -80,7 +80,7 @@
                             <button class="c-button js-sign-in-button">Log in</button>
                         </p>
                         <label class="c-lbl-password">
-                            wachtwoord vergeten
+                            Wachtwoord vergeten
                         </label>   
                     </div>
                 </form>
