--- a/Frontend/leerkrachtenvragen.html
+++ b/Frontend/leerkrachtenvragen.html
@@ -30,7 +30,7 @@
                     <label class="lbl-home">Afmelden</label>
                 </div>
                 <div class="c-btngebruiker js-gebruiker">
-                    <label class="lbl-gebruiker">Gebruiker toevoegen</label>
+                    <label class="lbl-gebruiker">Alle gebruikers</label>
                 </div>
                 <div class="c-highscorebtn">
                     <label class="lbl-highscore js-btn--delete-highscore">Verwijder highscore</label>
