--- a/Frontend/users.html
+++ b/Frontend/users.html
@@ -19,6 +19,7 @@
     <div class="c-box--users">
         <div class="c-title-bar">
             <h1 class="c-white">Alle gebruikers</h1>
+            <button class="c-btn c-btn__change-user js-changeuser">Gebruiker wijzigen</button>
             <button class="c-btn c-btn__add-user js-addUser">Gebruiker toevoegen</button>
         </div>
         <div class="c-users--background">
