CSS - Knoppen rechts gezet

--- a/Frontend/users.html
+++ b/Frontend/users.html
@@ -19,8 +19,10 @@
     <div class="c-box--users">
         <div class="c-title-bar">
             <h1 class="c-white">Alle gebruikers</h1>
-            <button class="c-btn c-btn__change-user js-changeuser">Gebruiker wijzigen</button>
-            <button class="c-btn c-btn__add-user js-addUser">Gebruiker toevoegen</button>
+            <div class="c-btns">
+                <button class="c-btn c-btn__change-user js-changeuser">Gebruiker wijzigen</button>
+                <button class="c-btn c-btn__add-user js-addUser">Gebruiker toevoegen</button>
+            </div>
         </div>
         <div class="c-users--background">
             <div class="c-users js-users">
